--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Start dev server
-      run: npm run dev
+      run: npm run dev &
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v3
